src/app/core/header/header.component.css
.logo {
    color: var(--white);
    margin-left: 1vw;
}

.header-container {
    flex: 0 1 auto;
    padding: 1vh 0;
    background-color: var(--black);
    min-width: 100%;
    height: 8vh;
    min-height: 8vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navigation {
    display: flex;
    font-size: 0.65rem;

    ul {
        display: flex;
    }

    li {
        list-style: none;
        height: 5vh;
        margin: 0 0.5vw;
        padding: 0.3vh 0.5vw;
        min-height: 40px;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    a {
        color: var(--white);
        text-decoration: none;
        text-transform: uppercase;
    }
}

.nav-specific {
    margin: 0 0.2vw;

}

/* nav buttons on hover */
div.navigation li:hover {
    border-radius: 5px;

    a {
        color: var(--rusty-red);
    }
}

/* apply now button */
.apply {
    border-radius: 5px;
    background-color: var(--white);

    a {
        color: var(--black);
    }
}

.apply:hover, .logout-active:hover {
    background-color: var(--jasmine) !important;
}

/* dropdown styling */
.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    min-width: 160px;
    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.7);
    z-index: 1;
    background-color: var(--white);
    /* border-radius: 5px;       */
}

.dropdown-content a {
    color: var(--black) !important;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: var(--cosmic-latte);
    color: var(--rusty-red) !important;
} 

.dropdown:hover .dropdown-content {
    display: block;
}

.underline {
    text-decoration: underline !important;
}

